--- a/climate-change/package.json
+++ b/climate-change/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "tailwindcss-animate": "^1.0.7",
+    "tw-colors": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
